--- a/面试准备/数据结构/数据结构.md
+++ b/面试准备/数据结构/数据结构.md
@@ -362,6 +362,8 @@ public V put(K key, V value) {
 }
 
 // 可以看出，HashMap.hash并不是Object.hash，而是特殊处理过的
+// key.hashCode()是int类型，长度为32bit
+//右位移16位，正好是32bit的一半，自己的高半区和低半区做异或，就是为了混合原始哈希码的高位和低位，以此来加大低位的随机性。而且混合后的低位掺杂了高位的部分特征，这样高位的信息也被变相保留下来。
 static final int hash(Object key) {
     int h;
     return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
@@ -1094,3 +1096,689 @@ private void fixAfterInsertion(Entry<K,V> x) {
  }
 ```
 
+## 13. 红黑树
+
+讲的很棒 https://blog.csdn.net/chen_zhang_yu/article/details/52415077?utm_medium=distribute.pc_relevant.none-task-blog-baidujs_title-2
+
+### 13.1 二叉搜索树：
+
+左边的节点总是小于右边的节点的二叉树
+
+**二叉搜索树从上投影是有序的** 
+
+![1621517969401](E:\SoftwareNote\面试准备\数据结构\img\二叉搜索树从上投影是有序的.png)
+
+- 二叉搜索树的遍历（命名规则：根在前中后）
+  - **中序遍历**： 左 ->**根**-> 右 ,遍历出来时有序的
+  - 前序遍历：**根** -> 左 -> 右
+  - 后序遍历：左 -> 右 -> **根**
+
+- 二叉搜索树找最大和最小值
+
+  - 最小值： 一直left(),直至left.left=null
+  - 最大值： 一直right(),直至right.right= null
+
+- 二叉搜索树的删除
+
+  - 没有子节点：删除树(即该子节点的父节点)对该子节点的引用
+  - 1个子节点：该子节点的父节点指向该子节点的子节点
+  - 2个子节点： 由该子节点的**后继节点（该子节点右侧的最小节点[如果不用最小节点，那么右侧还需要移动到新节点的左侧，工作量巨大]）**补上。
+
+- **另一种删除思路：逻辑删除**
+
+  删除需要移动树，因此可以增加一个删除属性，在查询前都多增加一个是否删除判断即可。
+
+- 二叉搜索树和数组/链表比较
+
+  - 数组的高效查询算法有二分查找，但是依赖数组有序，而且插入(一堆元素需要后移)和扩容都麻烦
+  - 链表则是不好遍历
+  - 二分查找树则是查找新增都很方便
+
+- 二叉搜索树的致命缺陷：畸形树
+
+  如果二叉搜索树的元素全部堆积在一边，那么树就退化成链表了，搜索效率变低
+
+  因此需要解决二叉搜索树左右树的高度差尽量小，即左右自平衡（AVL）
+
+![1621519950211](C:\Users\ASUS\AppData\Local\Temp\1621519950211.png)
+
+### 13.2 AVL树（平衡树）
+
+- AVL树 = 二叉搜索树 + 平衡左右树高度差不大于1（通过左旋/右旋控制）
+
+- 为什么有AVＬ树还需要红黑树？
+
+  AVL树虽然解决的二叉搜索树的致命缺点，但不是最佳解。因为条件太过苛刻(左右树高度差<=1)，
+
+  这个要求导致几乎每次新增/删除操作都需要旋转树来调整符合该规则，从而使性能大打折扣
+
+### 13.3 红黑树：黑色完美平衡(各链路黑点个数相同)
+
+#### 13.3.1  红黑树的性质
+
+- 每个节点要么是黑色，要么是红色
+
+- **根节点是黑色**
+
+- 每个叶子节点是黑色的
+
+- 每个红色节点的子节点一定是黑色的，即**不能有2个红色节点相连（旋转的依据）**
+
+- 任意节点到每个叶子节点的路径都包含数量相同的黑节点(**每条链路黑色数相同)，俗称黑高**！
+
+  因此，如果一个黑节点有一个黑子节点，那么该黑节点一定有两个节点（左右都有节点）
+
+![1621562825221](E:\SoftwareNote\面试准备\数据结构\img\红黑树的性质.png)
+
+#### 13.3.2 黑色完美平衡
+
+红黑树并不是一个完美平衡二叉树，左右树可能有大于1的高度差，但左右树的黑色节点数是相同的，即各个链路黑色节点个数是相同的。这种平衡称为黑色完美平衡。
+
+#### 13.3.3 红黑树的自平衡
+
+- 三大方式
+
+  - **变色** ：
+
+  - **左旋**：以某个节点E为旋转节点，把旋转节点E的右子节点S变成旋转节点E的父节点，再把右子节点S的左子树变成旋转节点的右子树
+
+    即：S.left = E, E.parent=S; E.right=S.left
+
+    ![1621562825221](E:\SoftwareNote\面试准备\数据结构\img\红黑树左旋.gif)
+
+  - **右旋**：以某个节点S为旋转节点，把旋转节点S的左子节点E变成旋转节点S的父节点，再把左子节点E的右子节点变成旋转节点S的左子节点。
+
+    即： E.right=S, S.parent=E; S.left=E.right
+
+![1621562825221](E:\SoftwareNote\面试准备\数据结构\img\红黑树右旋.gif)
+
+#### 13.3.4 红黑树的插入
+
+插入操作主要分为两部分：
+
+- 查找插入的位置，然后插入
+- 自平衡操作
+
+**注意**：
+
+​	插入节点，必须为红色，因为红色再父节点（如果存在）为黑色节点时，**红黑色的黑色平衡没有被破坏**，无需做自平衡。 
+
+​	如果插入黑色，那么黑色平衡遭到破坏，必须做自平衡。
+
+#### 13.3.5 红黑树插入场景分析
+
+1. 红黑树为空数：
+
+   直接插入就好，但是根节点需要插入黑色。
+
+2. 插入节点的key已存在：
+
+   更新存在节点的value即可
+
+3. 插入的节点的父节点为黑色：
+
+   直接插入即可，因为插入节点为黑色，不影响平衡
+
+4. **插入的节点父节点为红色（主要逻辑）** 
+
+   4.1 叔叔节点(父的兄弟节点)也为红色
+
+   ​	那么爷爷节点一定为黑色，因为不可能红红相连，而插入节点为红色，因此会变成黑红红。**最简单的做法**	
+
+   ​	**就是变色，把爷爷节点变红，把父叔节点变黑，这样可以达到黑色完美平衡**。然后再处理爷爷节点(制成
+
+   ​	当前节点)，处理爷爷节点主要**看爷爷的父节点是什么颜色**，如果是黑色不用管，**红色破坏了红红补相连**
+
+   ​	**原则，需要按上述步骤(步骤4)重新处理爷爷节点(当前节点)** 
+
+   ![1621522103363](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.1.png)
+
+   4.2 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的左子节点（即往爷爷左树插入）
+
+   ​	4.2.1 插入节点为该节点的父节点的左子节点（LLr左左红）
+
+   ​	1）变色：**父爷换色**
+
+   ​	2）旋转：**以爷爷节点为支点进行右旋**
+
+   ![1621522448525](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.2.1LLr左左红.png)
+
+   ​	4.2.2 插入节点为该节点的父节点的右子节点（LRr左右红）
+
+   ​	1）左旋：**以父节点为支点左旋(设置原父节点为当前节点)**
+
+   ​	2）然后就成了4.2.1，重复4.2.1即可（变色+右旋）
+
+   ![1621522482217](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.2.2LRr左右红.png)
+
+   4.3 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的右子节点（即往爷爷右树插入），4.3其实是4.2反过来，逻辑左右处理相反即可。
+
+   ​	4.3.1 插入节点为该节点的父节点的右子节点（RRr右右红）
+
+   ​	1）变色：父爷换色
+
+   ​	2）左旋：以爷爷节点为指点左旋
+
+   ![1621522816908](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.3.1RLr右左红.png)
+
+   ​	4.3.2 插入节点为该节点的父节点的左子节点（RLr右左红）
+
+   ​	1）右旋：以父节点为指点右旋
+
+   ​	2）同4.3.1一样（换色+左旋）
+
+   ![1621522992698](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.3.2RRr右右红.png)
+
+- 插入示意图
+
+  ![1621523189811](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入示意图.png)
+
+#### 13.3.6 代码实现
+
+- 代码层面分析
+
+![1621559265799](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入逻辑代码分析.png)
+
+- 代码
+
+```java
+package com.codeman.RBTree;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
+/**
+ * @author: zhanghongjie
+ * @description: 红黑树
+ * <p>
+ * 1. 红黑树为空数：
+ * 直接插入就好，但是根节点需要插入黑色。
+ * 2. 插入节点的key已存在：
+ * 更新存在节点的value即可
+ * 3. 插入的节点的父节点为黑色：
+ * 直接插入即可，因为插入节点为黑色，不影响平衡
+ * 4. 插入的节点父节点为红色（主要逻辑）
+ * 4.1 叔叔节点(父的兄弟节点)也为红色
+ * 那么爷爷节点一定为黑色，因为不可能红红相连，而插入节点为红色，因此会变成黑红红。最简单的做法
+ * 就是变色，把爷爷节点变红，把父叔节点变黑，这样可以达到黑色完美平衡。然后再处理爷爷节点(制成
+ * 当前节点)，处理爷爷节点主要看爷爷的父节点是什么颜色，如果是黑色不用管，红色破坏了红红补相连
+ * 原则，需要按上述步骤(步骤4)重新处理爷爷节点(当前节点)
+ * 4.2 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的左子节点（即往爷爷左树插入）
+ * 4.2.1 插入节点为该节点的父节点的左子节点（LLr左左红）
+ * 1）变色：父爷换色
+ * 2）旋转：以爷爷节点为支点进行右旋
+ * 4.2.2 插入节点为该节点的父节点的右子节点（LRr左右红）
+ * 1）左旋：以父节点为支点左旋(设置原父节点为当前节点)
+ * 2）然后就成了4.2.1，重复4.2.1即可（变色+右旋）
+ * <p>
+ * 4.3 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的右子节点（即往爷爷右树插入），
+ * 步骤4.3其实是4.2反过来，逻辑左右处理相反即可。
+ * 4.3.1 插入节点为该节点的父节点的左子节点（RLr左左红）
+ * 1）变色：父爷换色
+ * 2）左旋：以爷爷节点为指点左旋
+ * 4.3.2 插入节点为该节点的父节点的右子节点（RRr左左红）
+ * 1）右旋：以父节点为指点右旋
+ * 2）同4.3.1一样（换色+左旋）
+ * @date: 2021/5/21 9:46
+ * @version: 1.0
+ */
+public class RBTree<K extends Comparable, V> {
+
+    /**
+     * 树根
+     */
+    private BRNode<K, V> root;
+
+
+    /**
+     * 添加操作
+     *
+     * @param key
+     * @param value
+     */
+    public void put(K key, V value) {
+        if (root == null) {
+            root = new BRNode<>(key, value);
+            root.setColor(BRNodeColor.BLACK);
+        } else {
+            // 比较添加
+            BRNode<K, V> newNode = onlyPut(key, value);
+            // 自平衡
+            autoBalance(newNode);
+
+        }
+    }
+
+    /**
+     * 自平衡
+     * 1. 红黑树为空数：
+     * 直接插入就好，但是根节点需要插入黑色。
+     * 2. 插入节点的key已存在：
+     * 更新存在节点的value即可
+     * 3. 插入的节点的父节点为黑色：
+     * 直接插入即可，因为插入节点为黑色，不影响平衡
+     * 4. 插入的节点父节点为红色（主要逻辑）
+     * 4.1 叔叔节点(父的兄弟节点)也为红色
+     * 那么爷爷节点一定为黑色，因为不可能红红相连，而插入节点为红色，因此会变成黑红红。最简单的做法
+     * 就是变色，把爷爷节点变红，把父叔节点变黑，这样可以达到黑色完美平衡。然后再处理爷爷节点(制成
+     * 当前节点)，处理爷爷节点主要看爷爷的父节点是什么颜色，如果是黑色不用管，红色破坏了红红补相连
+     * 原则，需要按上述步骤(步骤4)重新处理爷爷节点(当前节点)
+     * 4.2 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的左子节点（即往爷爷左树插入）
+     * 4.2.1 插入节点为该节点的父节点的左子节点（LLr左左红）
+     * 1）变色：父爷换色
+     * 2）旋转：以爷爷节点为支点进行右旋
+     * 4.2.2 插入节点为该节点的父节点的右子节点（LRr左右红）
+     * 1）左旋：以父节点为支点左旋(设置原父节点为当前节点)
+     * 2）然后就成了4.2.1，重复4.2.1即可（变色+右旋）
+     * <p>
+     * 4.3 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的右子节点（即往爷爷右树插入），
+     * 步骤4.3其实是4.2反过来，逻辑左右处理相反即可。
+     * 4.3.1 插入节点为该节点的父节点的左子节点（RLr左左红）
+     * 1）变色：父爷换色
+     * 2）左旋：以爷爷节点为指点左旋
+     * 4.3.2 插入节点为该节点的父节点的右子节点（RRr左左红）
+     * 1）右旋：以父节点为指点右旋
+     * 2）同4.3.1一样（换色+左旋）
+     * @param newNode
+     */
+    private void autoBalance(BRNode<K, V> newNode) {
+        // 1 和 2在onlyPut已经做了
+        if (newNode != null) {
+            // 3. 插入的节点的父节点为黑色：
+            //  直接插入即可，因为插入节点为黑色，不影响平衡
+            BRNode<K, V> parent = newNode.parent;
+            if (parent != null) {
+                // 红色才需要自平衡，因为不能双红
+                if (parent.color == BRNodeColor.RED) {
+                    // 4. 插入的节点父节点为红色（主要逻辑）
+                    // 4.1 叔叔节点(父的兄弟节点)也为红色
+                    // 那么爷爷节点一定为黑色，因为不可能红红相连，而插入节点为红色，因此会变成黑红红。最简单的做法
+                    // 就是变色，把爷爷节点变红，把父叔节点变黑，这样可以达到黑色完美平衡。然后再处理爷爷节点(制成
+                    // 当前节点)，处理爷爷节点主要看爷爷的父节点是什么颜色，如果是黑色不用管，红色破坏了红红补相连
+                    // 原则，需要按上述步骤(步骤4)重新处理爷爷节点(当前节点)
+                    BRNode<K, V> gPar = parent.parent;
+                    if (gPar == null) {
+                        if (parent.left == newNode) {
+                            // 右旋
+                            rightRotate(parent);
+                        } else {
+                            leftRotate(parent);
+                        }
+                        return;
+                    }
+                    if ((gPar.left != null && gPar.right != null) && gPar.left.color == gPar.right.color) {
+                        // 父/叔节点都为红色
+                        // 变色
+                        gPar.left.color = gPar.right.color = BRNodeColor.BLACK;
+                        gPar.setColor(BRNodeColor.RED);
+                    } else {
+                        if (gPar.left == parent) {
+                            // 4.2 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的左子节点（即往爷爷左树插入）
+                            if (parent.right == newNode) {
+                                // 4.2.2 插入节点为该节点的父节点的右子节点（LRr左右红）
+                                // 1）左旋：以父节点为支点左旋(设置原父节点为当前节点)
+                                leftRotate(parent);
+                                // newNode = parent;
+                            }
+                            // 2）然后就成了4.2.1，重复4.2.1即可（变色+右旋）
+
+                            // 4.2.1 插入节点为该节点的父节点的左子节点（LLr左左红）
+                            // 1）变色：父爷换色
+                            gPar.setColor(BRNodeColor.RED);
+                            // 不能用parent，因为parent已经变色
+                            gPar.left.setColor(BRNodeColor.BLACK);
+                            // 2）旋转：以爷爷节点为支点进行右旋
+                            rightRotate(gPar);
+                        } else {
+                            // 4.3 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的右子节点（即往爷爷右树插入），
+
+                            if (parent.left == newNode) {
+                                // 4.3.2 插入节点为该节点的父节点的左子节点（RLr右左红）
+                                // 1）右旋：以父节点为指点右旋
+                                rightRotate(parent);
+                            }
+
+                            // 2）同4.3.1一样（换色+左旋）
+
+                            // 步骤4.3其实是4.2反过来，逻辑左右处理相反即可。
+                            // 4.3.1 插入节点为该节点的父节点的右子节点（RRr右右红）
+                            // 1）变色：父爷换色
+                            gPar.setColor(BRNodeColor.RED);
+                            // 不能用parent，因为parent已经变色
+                            gPar.right.setColor(BRNodeColor.BLACK);
+                            // 2）左旋：以爷爷节点为指点左旋
+                            leftRotate(gPar);
+                        }
+
+                    }
+                    // 以爷爷节点为当前节点，继续重复（递归）
+                    if (gPar.parent != null) {
+                        autoBalance(gPar);
+                    } else {
+                        if (gPar.left == parent) {
+                            rightRotate(gPar);
+                        } else {
+                            leftRotate(gPar);
+                        }
+                    }
+
+                }
+            } else {
+                // 重置root
+                root = newNode;
+            }
+        }
+
+    }
+
+    /**
+     * 右旋
+     *        A
+     *
+     *     B     E
+     *
+     * C      (D)
+     *
+     *
+     * @param node
+     */
+    private void rightRotate(BRNode<K, V> node) {
+        if (node != null) {
+            BRNode<K, V> oldLeft = node.left;
+            BRNode<K, V> oldParent = node.parent;
+            if (oldLeft != null) {
+                if (oldLeft.right != null) {
+                    oldLeft.right.parent = node;
+                }
+                node.left = oldLeft.right;
+                oldLeft.right = node;
+                node.parent = oldLeft;
+                if (oldParent != null) {
+                    oldLeft.parent = oldParent;
+                    if (oldParent.left == node) {
+                        oldParent.left = oldLeft;
+                    } else {
+                        oldParent.right = oldLeft;
+                    }
+                } else {
+                    // 改root
+                    oldLeft.parent = null;
+                    root = oldLeft;
+                }
+            }
+        }
+    }
+
+    /**
+     * 左旋
+     *        A
+     *
+     *     B      E
+     *
+     *        (D)      F
+     * @param node
+     */
+    private void leftRotate(BRNode<K, V> node) {
+        if (node != null) {
+            BRNode<K, V> oldRight = node.right;
+            BRNode<K, V> oldParent = node.parent;
+            if (oldRight != null) {
+                node.right = oldRight.left;
+                if (oldRight.left != null) {
+                    oldRight.left.parent = node;
+                }
+                oldRight.left = node;
+                node.parent = oldRight;
+
+                if (oldParent != null) {
+                    oldRight.parent = oldParent;
+                    if (oldParent.left == node) {
+                        oldParent.left = oldRight;
+                    } else {
+                        oldParent.right = oldRight;
+                    }
+                } else {
+                    // 改root
+                    oldRight.parent = null;
+                    root = oldRight;
+                }
+            }
+        }
+    }
+
+    /**
+     * 只做比较插入
+     * @param key
+     * @param value
+     */
+    private BRNode<K, V> onlyPut(K key, V value) {
+        BRNode<K, V> temp = root;
+        while (true) {
+            if (temp.key.compareTo(key) == 0) {
+                // 相同则替换值
+                temp.setValue(value);
+                return temp;
+            } else if (temp.key.compareTo(key) > 0) {
+                if (temp.left == null) {
+                    temp.left = new BRNode<>(key, value);
+                    temp.left.setColor(BRNodeColor.RED);
+                    temp.left.setParent(temp);
+                    return temp.left;
+                }
+                // 小于则往左比较
+                temp = temp.left;
+
+            } else {
+                if (temp.right == null) {
+                    temp.right = new BRNode<>(key, value);
+                    temp.right.setColor(BRNodeColor.RED);
+                    temp.right.setParent(temp);
+                    return temp.right;
+                }
+                // 大于则往右比较
+                temp = temp.right;
+            }
+        }
+    }
+
+
+    /**
+     * 获取最大值
+     *
+     * @return
+     */
+    public BREntity<K, V> getMax() {
+        if (root != null) {
+            BRNode<K, V> last = root;
+            while (last.right != null) {
+                last = last.right;
+            }
+            return new BREntity<>(last.key, last.value);
+        }
+        return null;
+    }
+
+    /**
+     * 获取最小值
+     *
+     * @return
+     */
+    public BREntity<K, V> getMin() {
+        if (root != null) {
+            BRNode<K, V> first = root;
+            while (first.left != null) {
+                first = first.left;
+            }
+            return new BREntity<>(first.key, first.value);
+        }
+        return null;
+    }
+
+    /**
+     * 中序遍历方法
+     */
+    public BREntity[] trans2MidEntiryArr() {
+        List<BREntity> brEntityList = new ArrayList<>();
+        doTrans2MidEntiryArr(root, brEntityList);
+        return brEntityList.toArray(new BREntity[]{});
+    }
+
+    /**
+     * 中序遍历：前 -> 中 -> 后
+     * 要找到最前，可以用遍历
+     *
+     * @param node
+     * @param brEntityList
+     */
+    private void doTrans2MidEntiryArr(BRNode<K, V> node, List<BREntity> brEntityList) {
+        if (node != null) {
+            // 左边递归
+            doTrans2MidEntiryArr(node.left, brEntityList);
+            // 左边递归直至node.left为空，然后开始封装对象
+            brEntityList.add(transNode2Entity(node));
+            // 封装完，递归右树
+            doTrans2MidEntiryArr(node.right, brEntityList);
+        }
+    }
+
+    private BREntity<K, V> transNode2Entity(BRNode<K, V> node) {
+        return new BREntity<>(node.key, node.value);
+    }
+
+    /**
+     * 对外暴露的key-value映射
+     */
+    public class BREntity<K, V> {
+        K key;
+        V value;
+
+        public BREntity(K key, V value) {
+            this.key = key;
+            this.value = value;
+        }
+
+        public K getKey() {
+            return key;
+        }
+
+        public void setKey(K key) {
+            this.key = key;
+        }
+
+        public V getValue() {
+            return value;
+        }
+
+        public void setValue(V value) {
+            this.value = value;
+        }
+
+        @Override
+        public String toString() {
+            return "[" +key + "]";
+        }
+    }
+
+
+    /**
+     * 树需要一个节点
+     * 节点需要属性：
+     * key/value/color/left/right/parent
+     */
+    private class BRNode<K, V> {
+        K key;
+        V value;
+        BRNodeColor color;
+        BRNode<K, V> parent, left, right;
+
+        public BRNode(K key, V value) {
+            this.key = key;
+            this.value = value;
+        }
+
+        public void setKey(K key) {
+            this.key = key;
+        }
+
+        public void setValue(V value) {
+            this.value = value;
+        }
+
+        public void setColor(BRNodeColor color) {
+            this.color = color;
+        }
+
+        public void setParent(BRNode<K, V> parent) {
+            this.parent = parent;
+        }
+
+        public void setLeft(BRNode<K, V> left) {
+            this.left = left;
+        }
+
+        public void setRight(BRNode<K, V> right) {
+            this.right = right;
+        }
+    }
+
+    /**
+     * 节点颜色
+     */
+    private enum BRNodeColor {
+        RED, BLACK
+    }
+
+}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+![1621518701303](C:\Users\ASUS\AppData\Local\Temp\1621518701303.png)
