--- a/面试准备/JAVASE/杂.md
+++ b/面试准备/JAVASE/杂.md
@@ -107,6 +107,14 @@ String str = "abcd";
 	String a = "a";
 	String b = "ab";
 	String c = a + "b"; // 反编译后发现， String c = (new StringBuilder()).append(a).append("b").toString(); 说明c对象是new出来的，而不是去常量池创建
+// public synchronized String toString() {
+   //  if (toStringCache == null) {
+      //   toStringCache = Arrays.copyOfRange(value, 0, count);
+   //  }
+	// 可以看到SB.toString()返回的是new String()
+   //  return new String(toStringCache, true);
+// }
+
 	System.out.println((b == c)); //result = false 
 	// c在编译期间无法确认a对象的值(是否会变化)，因此编译期间无法确认c的值。
 	// 会在运行期间，动态的分配并将连接后的新地址复制给c。
@@ -120,7 +128,7 @@ String str = "abcd";
 
 调用 intern 方法。
 
-从JDK7开始，**如果在常量池找不到对应的字符串，则不会再将字符串拷贝到常量池，而只是在常量池中生成一个对原字符串的引用。简单的说，就是往常量池放的东西变了：原来在常量池中找不到时，复制一个副本放到常量池，1.7后则是将在<u>堆上的地址引用复制到常量池</u>。**(intern不再拷贝字符串到常量池，而是只有堆的地址引用ef0010, 相比之前，可以节省空间) 
+从JDK7开始，**如果在常量池找不到对应的字符串，则不会再将字符串拷贝到常量池，而只是在常量池中生成一个对原字符串的引用。简单的说，就是往常量池放的东西变了：原来在常量池中找不到时，复制一个副本放到常量池，1.7后则是将在<u>堆上的地址引用复制到常量池</u>。**(intern不再拷贝字符串到常量池，而是只有堆的地址引用ef0010, 相比之前，可以节省空间,常量指针指向堆) 
 
 ![1615098869302](E:\SoftwareNote\面试准备\JAVASE\img\String的intern方法.png)
 
@@ -206,64 +214,7 @@ public class Version {
     
 ```
 
-## 3. Class方法
-
-### 3.1 getModifiers
-
-- `public native int getModifiers()`,通过返回值可以确定该对象（方法/字段）的全部访问修饰符
-
-  得到的就是 前面的 的修饰符 ，这个方法 字段和方法 都有。这个方法的值是 修饰符 相加的到的值 
-
-  ```java
-  public class Test1 {
-  
-      String c;
-      public String a;
-      private String b;
-      protected String d;
-      static String e;
-      final String f="f";
-  	
-      public static void main(String[] args) {
-          Field[] fields = Test1.class.getDeclaredFields();
-          for( Field field: fields) {
-              System.out.println( field.getName() +":" + field.getModifiers() );
-              // c:0
-              // a:1
-              // b:2
-              // d:4
-              // e:8
-              // f:16
-          }
-      }
-  }
-  ```
-
-  所以：什么都不加 是0 ， public  是1 ，private 是 2 ，protected 是 4，static 是 8 ，final 是 16。
-
-  如果是   public  static final  三个修饰的 就是3 个的加和 为 25 。
-
-### 3.2 isAssignableFrom 
-
-- 作用： 判断类是否有继承关系，类似instanceof
-
-- 与instanceof的区别
-
-  - instanceof 是判断实例是否是继承关系
-
-    ```java
-    if (businesDetail instanceof DiscoutBizDetail)
-    ```
-
-  - isAssignableFrom则是判断类是否是继承关系
-
-    ```java
-    DiscoutBizDetail.class.isAssignableFrom(businesDetail.getClass())
-    ```
-
-isAssignableFrom() 
-
-## 4. ++/-- 操作数栈和常量池
+## 3. ++/-- 操作数栈和常量池
 
 **总结：算数运算是在操作数栈里面运算，而++动作直接改变常量的值，即自增自减不经过操作数栈**
 
@@ -285,7 +236,7 @@ main() {
 
 ![1621933737430](E:\SoftwareNote\面试准备\JAVASE\img\++ 操作数栈和常量池.png)
 
-## 5. 类的初始化/实例的初始化过程
+## 4. 类的初始化/实例的初始化过程
 
  对象实例化过程(同级则顺序执行)
 
@@ -389,9 +340,9 @@ class Son extends Farther {
 }
 ```
 
-## 6. 方法的重写和重载
+## 5. 方法的重写和重载
 
-### 6.1 方法重写
+### 5.1 方法重写
 
 - 不可重写
   - 父类final修饰
@@ -403,14 +354,14 @@ class Son extends Farther {
   - 不抛出比父类范围大的异常
   - 返回值是父类的或extends
 
-### 6.2 方法重载
+### 5.2 方法重载
 
 - 性质：
   - 相同方法名
   - 形参个数或顺序不同
   - 与修饰符/返回值无关
 
-## 7. 局部变量和成员变量
+## 6. 局部变量和成员变量
 
 - 局部变量存在的位置
   - 方法块内部
@@ -436,8 +387,34 @@ class Son extends Farther {
   - 非静态成员变量：堆
   - 静态成员变量：**方法区**
 
-## 8. 反射相关
+## 7. Object方法 
 
-### 8.1 ParameterizedType
+### 7.1 finalize : GC对象前会调用该方法
 
-所有的泛型 instanceof ParameterizedType.
+如果对象有重写该方法，那么GC前会执行，可以复活对象。
+
+```java
+public class FinalizeDemo {
+
+    static Finalizeee finalizeee = null;
+    public static void main(String[] args) throws InterruptedException {
+        finalizeee = new Finalizeee();
+        finalizeee = null;
+        System.out.println("gc before");
+        System.gc();
+        Thread.sleep(500);
+        System.out.println("gc after");
+        System.out.println(finalizeee);
+    }
+}
+
+class Finalizeee {
+    @Override
+    protected void finalize() throws Throwable {
+        super.finalize();
+        FinalizeDemo.finalizeee = this;
+        System.out.println("复活啦");
+    }
+}
+```
+
