--- a/面试准备/数据结构/数据结构.md
+++ b/面试准备/数据结构/数据结构.md
@@ -276,7 +276,7 @@ public boolean add(E e) {
 - 底层是数组+链表+红黑树(jdk8)
 
 - 添加流程：
-  - 先得到Key的hash值（转换为索引值）
+  - 先得到Key的hash值（转换为索引值） (h = key.hashCode()) ^ (h >>> 16);
   - 在存储数据表table中，查看该索引位置是否有存值
   - 没有则直接加入
   - 有则调用equals方法依次与该索引中的其他元素比较，相同则放弃添加，不同则添加到最后
@@ -288,7 +288,7 @@ public boolean add(E e) {
 
   - 扩容规则：
 
-    1.0 首次扩容
+    1.0 首次扩容（容量+临界值）
     	newCap = DEFAULT_INITIAL_CAPACITY(1 << 4）= 16
             newThr = (int)(DEFAULT_LOAD_FACTOR(0.75f) * DEFAULT_INITIAL_CAPACITY(1 << 4）); = 12
     1.1. oldSize > MAXIMUM_CAPACITY(1<<30) ,临界值threshold = Integer.MAX_VALUE，不再扩容
@@ -705,7 +705,7 @@ private void linkNodeLast(LinkedHashMap.Entry<K,V> p) {
      }
  }
 
-// lua算法，移除最老元素，当removeEldestEntry(first)为true的时候(不重写默认false)，因此想要实现lua，只需重写该方法即可
+// lra算法，移除最老元素，当removeEldestEntry(first)为true的时候(不重写默认false)，因此想要实现lua，只需重写该方法即可
 void afterNodeInsertion(boolean evict) { // possibly remove eldest
     LinkedHashMap.Entry<K,V> first;
     if (evict && (first = head) != null && removeEldestEntry(first)) {
