--- a/面试准备/数据结构/数据结构.md
+++ b/面试准备/数据结构/数据结构.md
@@ -79,7 +79,7 @@ private void grow(int minCapacity) {
 - 如果是无参构造器，默认都是10个长度
 
 - Vector线程安全/效率低，ArrayList反之。
-- 扩容倍数：vector为2倍，ArrayList为1.5
+- 扩容倍数：**vector为2倍，ArrayList为1.5**
 
 ### 3.2 扩容机制
 
@@ -552,7 +552,7 @@ final void treeifyBin(Node<K,V>[] tab, int hash) {
 
 ```
 
-- remove操作: 可以看到remove动作需要调用hash去找到对应的元素。那如果hashCode被重写，然后remove前元素被修改，那就删不到这个元素，因为元素属性变化后新旧hash已经不同。
+- remove操作: 可以看到remove动作需要调用hash去找到对应的元素。**那如果hashCode被重写，然后remove前元素被修改，那就删不到这个元素，因为元素属性变化后新旧hash已经不同。**
 
 ```java
 public V remove(Object key) {
@@ -564,7 +564,65 @@ public V remove(Object key) {
 
 下面这题，最终size为4
 
+1. 在remove(p1)时，p1(1001,"CC")的hash在table中找不到，因此无法删除
+
+2. set.add(new Person(1001, "CC"))此时算出来的hash和p1不重叠，因此可以插入
+
+3. set.add(new Person(1001, "AA"))时，此时map里面存的都是new Person(1001, "CC"),因此还是可以插入(hash一样，但是equals不一样，因此被判别成不同对象)
+
+   hash分布：
+
+   1001,"AA" ====>  **new Person(1001, "CC")**  --next->  new Person(1001, "AA")
+
+   1002,"BB" ====> new Person(1002, "BB") 
+
+   1001,"CC" ====>  new Person(1001, "CC") 
+
 ![1620725666009](E:\SoftwareNote\面试准备\数据结构\img\HashMap的remove题目.png)
+
+### 6.3 与JDK7对比
+
+- JDK数据结构为数组+链表
+
+- 链表的插入位置（头/尾）
+
+  - JDK7是头插法
+
+  ```java
+  void createEntry(int hash, K key, V value, int bucketIndex) {
+      Entry<K,V> e = table[bucketIndex];
+      table[bucketIndex] = new Entry<>(hash, key, value, e);
+      size++;
+  }
+  
+  Entry(int h, K k, V v, Entry<K,V> n) {
+      value = v;
+      // next = table[bucketIndex]
+      next = n;
+      key = k;
+      hash = h;
+  }
+  ```
+
+  - JDK8是尾插法
+
+  ```java
+  for (int binCount = 0; ; ++binCount) {
+      if ((e = p.next) == null) {
+          // p.next
+          p.next = newNode(hash, key, value, null);
+          if (binCount >= TREEIFY_THRESHOLD - 1) // -1 for 1st
+              treeifyBin(tab, hash);
+          break;
+      }
+      if (e.hash == hash &&
+          ((k = e.key) == key || (key != null && key.equals(k))))
+          break;
+      p = e;
+  }
+  ```
+
+  
 
 ## 7. LinkedHashSet
 
@@ -705,7 +763,8 @@ private void linkNodeLast(LinkedHashMap.Entry<K,V> p) {
      }
  }
 
-// lra算法，移除最老元素，当removeEldestEntry(first)为true的时候(不重写默认false)，因此想要实现lua，只需重写该方法即可
+// lru算法，移除最老元素，当removeEldestEntry(first)为true的时候(不重写默认false)，因此想要实现lru，只需重写该方法即可
+// LRU : Least Recently Used
 void afterNodeInsertion(boolean evict) { // possibly remove eldest
     LinkedHashMap.Entry<K,V> first;
     if (evict && (first = head) != null && removeEldestEntry(first)) {
@@ -798,10 +857,10 @@ final Node<K,V> getNode(int hash, Object key) {
 
 ### 9.1 和HashMap比较
 
-|           | 版本 |          线程安全           | 效率 | 底层数据结构             |                    null值                    |
-| :-------: | :--: | :-------------------------: | :--: | ------------------------ | :------------------------------------------: |
-|  HashMap  | 1.2  |           不安全            |  高  | 数组+链表+红黑树（jdk8） |                     允许                     |
-| Hashtable | 1.0  | 安全(推荐ConcurrentHashMap) | 较低 | 数组+链表                | 不允许null的key和value(NullPointerException) |
+|           | 版本 |          线程安全           | 效率 | 底层数据结构             |                            null值                            |
+| :-------: | :--: | :-------------------------: | :--: | ------------------------ | :----------------------------------------------------------: |
+|  HashMap  | 1.2  |           不安全            |  高  | 数组+链表+红黑树（jdk8） |                             允许                             |
+| Hashtable | 1.0  | 安全(推荐ConcurrentHashMap) | 较低 | 数组+链表                | **不允许null的key和value**(NullPointerException,ConcurrentHashMap也不允许) |
 
 ### 9.2 源码解读
 
@@ -888,7 +947,7 @@ protected Entry(int hash, K key, V value, Entry<K,V> next) {
     this.hash = hash;
     this.key =  key;
     this.value = value;
-    // 加到头部
+    // 加到头部，和1.7的hashMap一样
     this.next = next;
 }
 ```
@@ -1731,6 +1790,39 @@ public class RBTree<K extends Comparable, V> {
 
 }
 
+```
+
+## 14. ConcurrentHashMap
+
+### 14.1 锁的粒度: 一条链表
+
+synchronized(tabAt(tab, i = (n - 1) & hash)) ，但是需要改造原来的size++，不然并发会出错，因此有个addCount方法，用的是CAS加size
+
+```java
+final V putVal(K key, V value, boolean onlyIfAbsent) {
+    if (key == null || value == null) throw new NullPointerException();
+    int hash = spread(key.hashCode());
+    int binCount = 0;
+    for (Node<K,V>[] tab = table;;) {
+        Node<K,V> f; int n, i, fh;
+        if (tab == null || (n = tab.length) == 0)
+            tab = initTable();
+        else if ((f = tabAt(tab, i = (n - 1) & hash)) == null) {
+            if (casTabAt(tab, i, null,
+                         new Node<K,V>(hash, key, value, null)))
+                break;                   // no lock when adding to empty bin
+        }
+        else if ((fh = f.hash) == MOVED)
+            tab = helpTransfer(tab, f);
+        else {
+            V oldVal = null;
+            // f = tabAt(tab, i = (n - 1) & hash) 可以看出锁的粒度为一条链表，即table数组的一个元素
+            synchronized (f) {
+				// .. 	
+            }
+        }
+    }
+}
 ```
 
 
