--- a/面试准备/算法/算法.md
+++ b/面试准备/算法/算法.md
@@ -287,3 +287,22 @@ public class RecursionNIteration {
 }
 ```
 
+## 3. int[]中重复最高的五个
+
+```java
+private static Integer[] getTop5(int[] arr) {
+    Integer[] objects = Arrays.stream(arr)
+        .boxed()
+        .parallel()
+        .filter(Objects::nonNull)
+        .collect(Collectors.groupingBy(Integer::intValue, Collectors.counting()))
+        .entrySet()
+        .stream()
+        .sorted((o1, o2) -> (int) (o2.getValue() - o1.getValue()))
+        .map(Map.Entry::getKey)
+        .toArray(Integer[]::new);
+    // [2=7, 1=6, 4=2, 5=2, 6=1, 7=1, 8=1]
+    return Arrays.copyOfRange(objects, 0, 5, Integer[].class);
+}
+```
+
