--- a/面试准备/JAVASE/杂.md
+++ b/面试准备/JAVASE/杂.md
@@ -449,3 +449,57 @@ class Finalizeee {
 3、只有在大量调用的时候cglib的效率高，但是在1.8的时候JDK的效率已高于cglib
 
 4、Cglib不能对声明final的方法进行代理，因为cglib是动态生成代理对象，final关键字修饰的类不可变只能被引用不能被修改
+
+## 9. 各种API
+
+### 9.1 Map
+
+#### 9.1.1 putIfAbsent  /  computeIfAbsent   /  computeIfPresent 
+
+```java
+{
+        Map<Integer, Integer> map = new HashMap<>();
+        map.putIfAbsent(1, 2);  // 2
+        map.putIfAbsent(1, 3);  // 2 不存在时才插入
+        map.computeIfAbsent(2, k -> 2);  // 2
+        map.computeIfAbsent(2, k -> ++k); // 2 不存在时插入，插入规则自定
+        map.put(3, 1);
+        map.computeIfPresent(3, (k, oV) -> ++oV); // 2
+        map.computeIfPresent(3, (k, oV) -> ++oV); // 3 存在时插入，插入规则自定
+}
+```
+
+### 9.2 Lambda
+
+```java
+private static Integer[] getTop5(int[] arr) {
+    Integer[] objects = Arrays.stream(arr)
+        .boxed()
+        .parallel()
+        .filter(Objects::nonNull)
+        .collect(Collectors.groupingBy(Integer::intValue, Collectors.counting()))
+        .entrySet()
+        .stream()
+        .sorted((o1, o2) -> (int) (o2.getValue() - o1.getValue()))
+        .map(Map.Entry::getKey)
+        .toArray(Integer[]::new);
+    // [2=7, 1=6, 4=2, 5=2, 6=1, 7=1, 8=1]
+    return Arrays.copyOfRange(objects, 0, 5, Integer[].class);
+}
+```
+
+## 10. 换行回车符 \r\n
+
+回车、换行的区别
+
+ 在Windows中：
+
+**‘\r’ (回车)：即将光标回到当前行的行首(而不会换到下一行)，之后的输出会把之前的输出覆盖**
+
+‘\n’ 换行，换到当前位置的下一位置，而不会回到行首；
+
+Unix系统里，每行结尾只有“<换行>”，**即"\n"；**
+
+Windows系统里面，每行结尾是“<回车><换行>”，**即“\r\n”；**
+
+Mac系统里，每行结尾是“<回车>”，**即"\r"；**
