--- a/面试准备/JAVASE/杂.md
+++ b/面试准备/JAVASE/杂.md
@@ -469,20 +469,65 @@ class Finalizeee {
 }
 ```
 
-### 9.2 Lambda
+### 9.2 Stream + Lambda
+
+Lambda 表达式是 Java 1.8 跟 Stream 机制一同推出的。Lambda 表达式极大地减少了代码量，增加了代码的可读性。  引入 Lambda 表达式之后，Java 开始支持**把函数作为参数传递**。 
+
+- 函数式接口：接口只**有唯一的未实现**的方法(可以用defalut/Object方法[所有类的基类])
+
+  可以用@FunctionalInterface注解声明，这样会编译时报错
+
+- 双冒号： “ :: ”
+
+  - 静态引用：.filter(Objects::nonNull) // 非空过滤 /  .map(Map.Entry::getKey)
+  - 普通方法引用： .filter(new Java8Stream()::start2) 语境要对。比如该filter的对象必须未start2的形参
+
+- 创建Stream的三种形式
+
+  - Stream静态方法：
+
+    Stream.of("1", "2", "3")
+
+  - Arrays.stream(Array)
+
+  - list.stream()
+
+  - 特殊流
+
+    还有两种比较特殊的流
+
+    - 空流：**Stream**.**empty()**
+    - 无限流：**Stream**.**generate()** 和 **Stream**.**iterate()**。可以配合 **limit()** 使用可以限制一下数量
+
+    ```java
+    // 接受一个 Supplier 作为参数
+    Stream.generate(Math::random).limit(10).forEach(System.out::println);
+    // 初始值是 0，新值是前一个元素值 + 2
+    Stream.iterate(0, n -> n + 2).limit(10).forEach(System.out::println);
+    ```
+
+>  **流处理的特性**
+
+1. **不存储数据**
+2. 不会改变数据源
+3. **不可以重复使用**: 每次链式调用都是产生新的stream，旧的stream被销毁
+
+- API 
 
 ```java
 private static Integer[] getTop5(int[] arr) {
     Integer[] objects = Arrays.stream(arr)
-        .boxed()
-        .parallel()
-        .filter(Objects::nonNull)
-        .collect(Collectors.groupingBy(Integer::intValue, Collectors.counting()))
-        .entrySet()
+        .boxed()  // 装箱
+        .parallel() // 并行
+        .filter(Objects::nonNull) // 非空过滤
+        .filter() // 重复过滤
+        .collect(Collectors.groupingBy(Integer::intValue, Collectors.counting())) // 聚集
+        // Collectors可做分组/求和/平均/转Map/转List/转Set等操作
+        .entrySet() // Map.Entry才可转换成stream
         .stream()
-        .sorted((o1, o2) -> (int) (o2.getValue() - o1.getValue()))
-        .map(Map.Entry::getKey)
-        .toArray(Integer[]::new);
+        .sorted((o1, o2) -> (int) (o2.getValue() - o1.getValue())) // 排序
+        .map(Map.Entry::getKey) // 转换
+        .toArray(Integer[]::new); // 聚集
     // [2=7, 1=6, 4=2, 5=2, 6=1, 7=1, 8=1]
     return Arrays.copyOfRange(objects, 0, 5, Integer[].class);
 }
