--- a/面试准备/设计模式/设计模式.md
+++ b/面试准备/设计模式/设计模式.md
@@ -149,6 +149,14 @@
 
   - 可采用静态内部类的形式（线程安全)
 
+    >  基于类初始化的解决方案
+
+    JVM在类的初始化阶段（即在Class被加载后，且被线程使用之前），会执行类的初始化。
+
+    **在执行类的初始化期间，JVM会去获取一个锁.这个锁可以同步多个线程对同一个类的初始化**。
+
+    基于这个特性，可以实现另一种线程安全的延迟初始化方案（这个方案被称之为Initialization On Demand Holder idiom)。
+
   ```java
   public class LazyInnerClassSingleton {
   
