--- a/vuejs/基础语法/基础语法.md
+++ b/vuejs/基础语法/基础语法.md
@@ -96,12 +96,29 @@
 
 #### 3.1.2 修饰符
 
-- `.stop` 调用even.stopPropagation()
-- `.prevent` 调用even.preventDefault()
+使用修饰符时，顺序很重要；相应的代码会以同样的顺序产生。因此，用 `v-on:click.prevent.self` 会阻止**所有的点击**，而 `v-on:click.self.prevent` 只会阻止对元素自身的点击
+
+- `.stop` 调用even.stopPropagation()   , 阻止单击事件继续传播
+
+- `.prevent` 调用even.preventDefault() , 提交事件不再重载页面
+
+- .stop.prevent 修饰符可以串联
+
 - `.{keyCode|keyAlias}` 按键触发
+
+- .capture  内部元素触发的事件先在此处理，然后才交由内部元素进行处理
+
 - `.native` 监听组件根元素的原生事件
+  
   - `<my-comp @click="clickFun"/>`这样是不会触发的，必须加上`@click.native="clickFun"`
+  
 - `.once` 只触发一次
+
+-  .self 只当在 event.target 是当前元素自身时触发处理函数
+
+-  .passive 滚动事件的默认行为 (即滚动行为) 将会立即触发
+
+  这个 `.passive` 修饰符尤其能够提升移动端的性能。
 
 ### 3.2 Vue封装的事件
 
@@ -200,7 +217,7 @@
 ## 8.v-once标签属性
 - 仅在第一次生效
 
-## 9.v-html'message'标签属性
+## 9.v-html='message'标签属性
 - 解析html标签并显示
 
 ## 10.v-text='message'标签属性
