--- a/面试准备/JAVASE/杂.md
+++ b/面试准备/JAVASE/杂.md
@@ -531,6 +531,28 @@ private static Integer[] getTop5(int[] arr) {
     // [2=7, 1=6, 4=2, 5=2, 6=1, 7=1, 8=1]
     return Arrays.copyOfRange(objects, 0, 5, Integer[].class);
 }
+
+
+public static void main(String[] args) {
+        List<FeeBillDetail> feeBillDetailList = new ArrayList<>();
+        feeBillDetailList.add(new FeeBillDetail().setType(1).setFee(new BigDecimal("23")));
+        feeBillDetailList.add(new FeeBillDetail().setType(2).setFee(new BigDecimal("66")));
+        feeBillDetailList.add(new FeeBillDetail().setType(2).setFee(new BigDecimal("34")));
+        Map<Integer, BigDecimal> collect = feeBillDetailList.stream()
+                .collect(Collectors.groupingBy(FeeBillDetail::getType, Collectors.toList()))
+                .entrySet()
+                .stream()
+                .map((entry) -> {
+                    HashMap<Integer, BigDecimal> resultMap = new HashMap<>();
+                    resultMap.put(entry.getKey(), entry.getValue().stream().map(FeeBillDetail::getFee).reduce(BigDecimal.ZERO, BigDecimal::add));
+                    return resultMap;
+                })
+                .flatMap(re -> re.entrySet().stream())
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue));
+        System.out.println(collect);
+    }
 ```
 
 ## 10. 换行回车符 \r\n
