--- a/面试准备/设计模式/设计模式.md
+++ b/面试准备/设计模式/设计模式.md
@@ -1,4 +1,32 @@
-# 设置模式
+# 设计模式
+
+>  **常用设计模式的使用场景：**
+
+如果需要创建实例，则通常离不开工厂和单例模式；
+
+如果涉及较为复杂的算法流程，部分算法需要在子类实现，则会用到模板方法模式；
+
+如果需要多种实现，并依据特定场景来选取使用，则会用到策略模式；
+
+搜索公众号后端架构师后台回复“架构整洁”，获取一份惊喜礼包。
+
+如果要将客户端接口及实现与框架的调用隔离，则会用到动态代理模式；
+
+如果要灵活叠加多种功能，则会用到装饰器模式；
+
+如果涉及到事件机制，则离不开观察者模式；
+
+如果需要在库实现的基础上提供简洁接口，则通常用到外观模式；
+
+如果要将多种实现与多种接口定义进行连接，则会用到桥接模式；
+
+如果需要涉及大量配置（规格）并生成实例，则通常用到生成器模式；
+
+如果涉及容器元素访问，则离不开迭代器模式；
+
+如果需要以统一接口访问整体与部分的行为，且整体由部分组成，则通常用到组合模式。
+
+理解基本设计模式的特征和适用场景，识别设计模式的使用，可以更自如地在框架源码之间穿梭。
 
 ## 1. 单例模式
 
