--- a/面试准备/JAVASE/杂.md
+++ b/面试准备/JAVASE/杂.md
@@ -553,6 +553,50 @@ public static void main(String[] args) {
                         Map.Entry::getValue));
         System.out.println(collect);
     }
+    
+    
+    
+// flatMap流的扁平化处理：讲集合扁平化
+public static void main(String[] args) {
+	// Map<String, List<String>> map = new HashMap<>();
+	List<List<String>> list = new ArrayList<>();
+	List<String> ll = new ArrayList<>();
+	ll.add("2222");
+	ll.add("3333");
+	list.add(ll);
+	List<String> ll2 = new ArrayList<>();
+	ll2.add("aaaa");
+	ll2.add("bbbb");
+	list.add(ll2);
+	System.out.println(list); // [[2222, 3333], [aaaa, bbbb]]
+	List<String> collect = list.stream()
+		.flatMap(List::stream) // .flatMap(zz -> zz.stream())
+		.collect(Collectors.toList());
+	System.out.println(collect); // [2222, 3333, aaaa, bbbb]
+}
+
+// Map<Object,List<Object>> 扁平化value
+
+void m(){
+	Map<Long, List<DatasourceVO>> datasourceVOMap = null;
+	Map<Long, DatasourceVO> collect = datasourceVOMap.get(moduleId)
+                                    .stream()
+                                    .collect(Collectors.groupingBy(DatasourceVO::getId, Collectors.toList())) // Map<Long, List<DatasourceVO>>
+                                    .entrySet()
+                                    .stream()  // Stream<Map<K,V>.Entry<<Long, List<DatasourceVO>>>
+                                    .map(entry -> {
+                                        HashMap<Long, DatasourceVO> resultMap = new HashMap<>();
+                                        resultMap.put(entry.getKey(), entry.getValue().get(0));
+                                        return resultMap;
+                                    }) // Stream<HashMap<Long, DatasourceVO>> 此时collection会返回List<Map>
+                                    .flatMap(re -> re.entrySet().stream()) // Stream<Map<K,V>.Entry<Long, List<DatasourceVO>>
+                                    .collect(Collectors.toMap(
+                                            Map.Entry::getKey,
+                                            Map.Entry::getValue));
+					    
+					    
+}
+
 ```
 
 ## 10. 换行回车符 \r\n
