'图片路径改为相对路径'

--- a/vuejs/基础语法/基础语法.md
+++ b/vuejs/基础语法/基础语法.md
@@ -54,7 +54,7 @@
 
 - 加了key就类似于把数组转换成链表，提高插入/删除效率。而且绑定的key要和item一一对应，可以直接绑定item，绑定index好像没效果
 
-- ![1600585009878](E:\softwareNote\vuejs\img\v-for的key.png)
+- ![1600585009878](img\v-for的key.png)
 
 ## 3. 事件监听
 
@@ -328,7 +328,7 @@ funcB(abc, event) {
 
 ## 17. v-on修饰符
 
-![1600269948114](E:\softwareNote\vuejs\img\v-on修饰符.png)
+![1600269948114](img\v-on修饰符.png)
 
 ## 18. v-if和v-show的区别
 
