--- a/vuejs/组件/组件.md
+++ b/vuejs/组件/组件.md
@@ -136,7 +136,7 @@ const app = new Vue({
 
 ### 2.2 父子组件之间的通信
 
-![1600701351901](E:\softwareNote\vuejs\img\父子组件通信.png)
+![1600701351901](img\父子组件通信.png)
 
 #### 2.2.1 父向子传递(子用props接收)
 
