--- a/面试准备/数据结构/数据结构.md
+++ b/面试准备/数据结构/数据结构.md
@@ -1,6 +1,6 @@
 # 数据结构
 
-![1619362580681](E:\SoftwareNote\面试准备\数据结构\img\数据结构.png)
+![1619362580681](img\数据结构.png)
 
 ## 1.一些知识点
 
@@ -578,7 +578,7 @@ public V remove(Object key) {
 
    1001,"CC" ====>  new Person(1001, "CC") 
 
-![1620725666009](E:\SoftwareNote\面试准备\数据结构\img\HashMap的remove题目.png)
+![1620725666009](img\HashMap的remove题目.png)
 
 ### 6.3 与JDK7对比
 
@@ -647,7 +647,7 @@ HashSet(int initialCapacity, float loadFactor, boolean dummy) {
 - 根据hashcode决定存储位置，链表存储决定了数据的有序性
 
 
-![1620693701429](E:\SoftwareNote\面试准备\数据结构\img\LinkedHashMap底层机制.png)
+![1620693701429](img\LinkedHashMap底层机制.png)
 
 ### 8.2 源码解读
 
@@ -1165,7 +1165,7 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
 **二叉搜索树从上投影是有序的** 
 
-![1621517969401](E:\SoftwareNote\面试准备\数据结构\img\二叉搜索树从上投影是有序的.png)
+![1621517969401](img\二叉搜索树从上投影是有序的.png)
 
 - 二叉搜索树的遍历（命名规则：根在前中后）
   - **中序遍历**： 左 ->**根**-> 右 ,遍历出来时有序的
@@ -1227,7 +1227,7 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
   因此，如果一个黑节点有一个黑子节点，那么该黑节点一定有两个节点（左右都有节点）
 
-![1621562825221](E:\SoftwareNote\面试准备\数据结构\img\红黑树的性质.png)
+![1621562825221](img\红黑树的性质.png)
 
 #### 13.3.2 黑色完美平衡
 
@@ -1243,13 +1243,13 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
     即：S.left = E, E.parent=S; E.right=S.left
 
-    ![1621562825221](E:\SoftwareNote\面试准备\数据结构\img\红黑树左旋.gif)
+    ![1621562825221](img\红黑树左旋.gif)
 
   - **右旋**：以某个节点S为旋转节点，把旋转节点S的左子节点E变成旋转节点S的父节点，再把左子节点E的右子节点变成旋转节点S的左子节点。
 
     即： E.right=S, S.parent=E; S.left=E.right
 
-![1621562825221](E:\SoftwareNote\面试准备\数据结构\img\红黑树右旋.gif)
+![1621562825221](img\红黑树右旋.gif)
 
 #### 13.3.4 红黑树的插入
 
@@ -1290,7 +1290,7 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
    ​	**原则，需要按上述步骤(步骤4)重新处理爷爷节点(当前节点)** 
 
-   ![1621522103363](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.1.png)
+   ![1621522103363](img\红黑树插入场景4.1.png)
 
    4.2 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的左子节点（即往爷爷左树插入）
 
@@ -1300,7 +1300,7 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
    ​	2）旋转：**以爷爷节点为支点进行右旋**
 
-   ![1621522448525](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.2.1LLr左左红.png)
+   ![1621522448525](img\红黑树插入场景4.2.1LLr左左红.png)
 
    ​	4.2.2 插入节点为该节点的父节点的右子节点（LRr左右红）
 
@@ -1308,7 +1308,7 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
    ​	2）然后就成了4.2.1，重复4.2.1即可（变色+右旋）
 
-   ![1621522482217](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.2.2LRr左右红.png)
+   ![1621522482217](img\红黑树插入场景4.2.2LRr左右红.png)
 
    4.3 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的右子节点（即往爷爷右树插入），4.3其实是4.2反过来，逻辑左右处理相反即可。
 
@@ -1318,7 +1318,7 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
    ​	2）左旋：以爷爷节点为指点左旋
 
-   ![1621522816908](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.3.1RLr右左红.png)
+   ![1621522816908](img\红黑树插入场景4.3.1RLr右左红.png)
 
    ​	4.3.2 插入节点为该节点的父节点的左子节点（RLr右左红）
 
@@ -1326,17 +1326,17 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
    ​	2）同4.3.1一样（换色+左旋）
 
-   ![1621522992698](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入场景4.3.2RRr右右红.png)
+   ![1621522992698](img\红黑树插入场景4.3.2RRr右右红.png)
 
 - 插入示意图
 
-  ![1621523189811](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入示意图.png)
+  ![1621523189811](img\红黑树插入示意图.png)
 
 #### 13.3.6 代码实现
 
 - 代码层面分析
 
-![1621559265799](E:\SoftwareNote\面试准备\数据结构\img\红黑树插入逻辑代码分析.png)
+![1621559265799](img\红黑树插入逻辑代码分析.png)
 
 - 代码
 
