--- a/面试准备/网络编程/网路编程.md
+++ b/面试准备/网络编程/网路编程.md
@@ -6,7 +6,7 @@
 
 首先Client端发送连接请求报文，Server段接受连接后回复ACK报文，并为这次连接分配资源。Client端接收到ACK报文后也向Server段**发生ACK报文，并分配资源**，这样TCP连接就建立了。
 
-![1622469448495](E:\SoftwareNote\面试准备\网络编程\img\TCP三次握手.png)
+![1622469448495](img\TCP三次握手.png)
 
 - 四次挥手
 
@@ -22,4 +22,4 @@
 
   5. Client端收到FIN报文后，"就知道可以关闭连接了，但是他还是不相信网络，怕Server端不知道要关闭，所以发送ACK**后进入TIME_WAIT状态**，如果**Server端没有收到ACK则可以重传(继续发送FIN)**。“，Server端收到ACK后，"就知道可以断开连接了"。**Client端等待了2MSL后依然没有收到回复，则证明Server端已正常关闭，那好，我Client端也可以关闭连接了**。Ok，TCP连接就这样关闭了！ 
 
-  ![1622469532986](E:\SoftwareNote\面试准备\网络编程\img\TCP四次挥手.png)
+  ![1622469532986](img\TCP四次挥手.png)
