--- a/面试准备/网络编程/网路编程.md
+++ b/面试准备/网络编程/网路编程.md
@@ -161,7 +161,7 @@ DNS1=192.168.1.2
 PEERDNS=no
 ```
 
-- 寻找下一跳，路由表 route -n
+- 寻找**下一跳**，路由表 route -n
 
   请求的ip与路由表中的掩码Genmask做位与运算，得到的地址和Destination对比，相同则匹配上，取Gateway作为默认网关(下一跳)
 
@@ -227,7 +227,7 @@ listening on ens33, link-type EN10MB (Ethernet), capture size 262144 bytes
 
 前导码+数据包
 
-## 2. CPU与IO
+## 2. CPU与IO(input/output)
 
 ### 2.1 CPU中断
 
@@ -281,6 +281,7 @@ listening on ens33, link-type EN10MB (Ethernet), capture size 262144 bytes
   ```shell
   man 2 socket
   ```
+
   ![img](image/网路编程/1652020298915.png)
 - java demo
 
@@ -317,3 +318,23 @@ listening on ens33, link-type EN10MB (Ethernet), capture size 262144 bytes
 - 缺点
 
   **假设有10000个client连接。则系统的调用为O(n)，而有效的调用可能才1,那么就有9999次的系统调用浪费了**
+
+#### 2.2.3 select  poll 多路复用
+
+有一个复用器，告诉它路线，会返回有需要连接的路线
+
+![](image/网路编程/1652612167591.png)
+
+#### 2.2.4 epoll 多路复用
+
+![](image/网路编程/1652612421190.png)
+
+
+![](image/网路编程/1652613853795.png)
+
+
+
+![img](image/网路编程/1652613873489.png)
+
+
+![](image/网路编程/1652613893462.png)
